Fix: Fix header visibility on mobile

--- a/src/components/common/pageHeader/PageHeader.css
+++ b/src/components/common/pageHeader/PageHeader.css
@@ -8,7 +8,7 @@
   background-position: center center;
   background-attachment: fixed;
   z-index: 1;
-  min-height: 300px;
+  min-height: 500px;
   display: flex;
   align-items: center;
   justify-content: center;
